Parallax size and effects on mobile fixed

--- a/src/assets/_pre/sass/components/_layout.scss
+++ b/src/assets/_pre/sass/components/_layout.scss
@@ -50,9 +50,9 @@
 }
 
 #download .parallax-container {
-    height: 74vh;
+    min-height: 74vh;
 }
 
 #contact .parallax-container {
-    height: 72vh;
+    min-height: 72vh;
 }
